# cubitpy

./: .coveragerc  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CONTRIBUTORS  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  test_groups.4C.yaml
.github/workflows/: build-test.yml  code_checks.yml  cubitpy_test_suite_with_secrets.yml  testing.yml  testing_protected.yml  testing_with_secrets.yml
cubitpy/: __init__.py  conf.py  cubit_group.py  cubit_nodes.py  cubit_utility.py  cubit_wrapper2.py  cubit_wrapper3.py  cubit_wrapper_utility.py  cubitpy.py  cubitpy_to_dat.py  cubitpy_types.py  geometry_creation_functions.py  mesh_creation_functions.py  utility_functions.py
cubitpy/cubit_wrapper/: __init__.py  cubit_wrapper2.py  cubit_wrapper3.py  cubit_wrapper_client.py  cubit_wrapper_host.py  cubit_wrapper_utility.py
src/cubitpy/: cubit_to_fourc_input.py  cubitpy.py  cubitpy_output.py  cubitpy_to_dat.py  cubitpy_types.py  yaml_dumper.py
src/tutorial/: tutorial.py
tests/: 10_cubpity_display_test.py  coverage.config  run_delete_test.py  test_configurations.sh  test_cubitpy.py  test_delete.py  test_tutorial.py  testing.py  testing_context.py  testing_header.py  testing_tutorial.py
tests/external-geometry/: fluent_aneurysm.msh
tests/input-files-ref/: test_block_function.4C.yaml  test_contact_condition_beam_to_surface.4C.yaml  test_contact_condition_curve_to_curve.4C.yaml  test_contact_condition_surface_to_surface.4C.yaml  test_create_block.4C.yaml  test_create_brick_by_corner_points.4C.yaml  test_create_wedge6.4C.yaml  test_cubit_tutorial.4C.yaml  test_cubit_tutorial_coreform.4C.yaml  test_element_types_hex.4C.yaml  test_element_types_quad_y_plane.4C.yaml  test_element_types_quad_zplane.4C.yaml  test_element_types_tet.4C.yaml  test_element_types_tet_coreform.4C.yaml  test_element_types_tet_cubit15.4C.yaml  test_extrude_mesh_function.4C.yaml  test_extrude_mesh_function_average_normals_block.4C.yaml  test_extrude_mesh_function_average_normals_for_cylinder_and_sphere.4C.yaml  test_fluid_functionality.4C.yaml  test_fluid_functionality_coreform.4C.yaml  test_fsi_functionality.4C.yaml  test_group_of_surfaces.4C.yaml  test_groups.4C.yaml  test_groups_multiple_sets.4C.yaml  test_mesh_import.4C.yaml  test_node_set_geometry_type.4C.yaml  test_point_coupling.4C.yaml  (+7 more)
tutorial/: __init__.py  tutorial.py
utility/: __init__.py  check_header.py
(+2 files in other folders)
