[build-system]
requires = ["setuptools"]

[tool.setuptools]
packages = [
  "cubitpy",
  "cubitpy.cubit_wrapper",
  "cubitpy_testing",
  "cubitpy_tutorial"
]

[tool.setuptools.package-dir]
cubitpy_testing = "tests"
cubitpy_tutorial = "tutorial"

[project]
name = "CubitPy"
authors = [
  {name = "Ivo Steinbrecher", email = "ivo.steinbrecher@unibw.de"},
]
description = "CubitPy: Utility functions and 4C related functionality for the Cubit and Coreform python interface"
readme = "README.md"
license = {file = "LICENSE"}
dependencies = [
  "black==22.12.0",
  "execnet==1.9.0",
  "netCDF4",
  "numpy"
]
dynamic = ["version"]

[project.optional-dependencies]
CI-CD = [
  "coverage",
  "coverage-badge",
  "setuptools", # Needed for coverage-badge
  "pytest"
]
