[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]


[project]
name = "CubitPy"
authors = [
  {name = "Ivo Steinbrecher", email = "ivo.steinbrecher@unibw.de"},
]
description = "CubitPy: Utility functions and 4C related functionality for the Cubit and Coreform python interface"
readme = "README.md"
license = "MIT"
dependencies = [
  "execnet==1.9.0",
  "netCDF4",
  "numpy"
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
  "coverage",
  "coverage-badge",
  "setuptools", # Needed for coverage-badge
  "pre-commit",
  "pytest",
  "pyyaml",
  "deepdiff",
  "fourcipp @ git+https://github.com/4C-multiphysics/fourcipp.git@main"
]
